sort.basic.cocktail.AlgCocktailSort2.scala.error
Erreur de compilation :
AlgCocktailSort2:18: error: value from is not a member of Int
  for (j <-d from f){
             ^